--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,82 +3,88 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+@Article{Repetto2018,
+  author   = {Repetto, Luca},
+  journal  = {The Economic Journal},
+  title    = {Political budget cycles with informed voters: evidence from Italy},
+  year     = {2018},
+  number   = {616},
+  pages    = {3320--3353},
+  volume   = {128},
+  abstract = {I exploit a reform that required Italian municipalities to disclose their balance sheets before elections to study whether having more informed voters affects the political budget cycle. Municipal investment in the year before elections is 28.5% higher than in electoral years, and the reform reduced this pre-electoral spending increase by one-third. I then study the role of local newspapers in disseminating municipal financial information to voters and find that the effect of the reform is twice as large in areas with relatively many newspaper readers, suggesting that mayors react to more informed voters by reducing spending manipulation.},
+  pdf      = {PBC_EJ_final.pdf},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@Article{Carozzi2019,
+  author    = {Carozzi, Felipe and Repetto, Luca},
+  journal   = {Regional Science and Urban Economics},
+  title     = {Distributive politics inside the city? The political economy of Spain's Plan E},
+  year      = {2019},
+  pages     = {85--106},
+  volume    = {75},
+  abstract  = {We study distributive politics inside cities by analysing how local governments allocate investment projects to voters across neighbourhoods. In particular, we ask whether politicians use investment to target their own supporters. To this aim, we use detailed geo-located investment data from \emph{Plan E}, a large fiscal stimulus program carried out in Spain in 2009-2011. Our main empirical strategy is based on a close-elections regression-discontinuity design. In contrast to previous studies -- which use aggregate data at the district or municipal level -- we exploit spatial variation in both investment and voter support within municipalities and find no evidence of supporter targeting. Complementary results indicate that voters may be responding to investment by increasing turnout.},
+  pdf       = {DP_inside_city_Feb_2019_Accepted.pdf},
+  publisher = {North-Holland},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@Article{Repetto2020,
+  author    = {Repetto, Luca and Solis, Alex},
+  journal   = {Journal of the European Economic Association},
+  title     = {The price of inattention: Evidence from the Swedish housing market},
+  year      = {2020},
+  number    = {6},
+  pages     = {3261--3304},
+  volume    = {18},
+  abstract  = {Do behavioral biases affect prices in a high-stakes market? We study the role of left-digit bias in the purchase of an apartment. Left-digit bias is the inability to fully process digits after the first, perceiving prices just below a round number (such as $3.99) as cheaper than their round counterpart ($4). Apartments listed at just-below asking prices are sold at a 3-5% higher final price after an auction. This effect appears not to be driven by differences in observables or in real estate agents' behavior. Auctions for apartments listed just-below are more competitive and attract more bidders and bids.},
+  pdf       = {HousePricesDraft_Sept_2019_JEEA_final.pdf},
+  publisher = {Oxford University Press},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@Article{Carozzi2022,
+  author   = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
+  journal  = {American Economic Journal: Applied Economics},
+  title    = {Political fragmentation and government stability: evidence from local governments in Spain},
+  year     = {2022},
+  number   = {2},
+  pages    = {23--50},
+  volume   = {14},
+  abstract = {This paper studies how political fragmentation affects government stability. Using a regression-discontinuity design, we show that each additional party with representation in the local parliament increases the probability that the incumbent government is unseated by 5 percentage points. The entry of an additional party affects stability by reducing the probability of a single-party majority and increasing the instability of governments when such a majority is not feasible. We interpret our results in light of a bargaining model of coalition formation featuring government instability.},
+  pdf      = {PFGS_CarozziCipulloRepetto_R2_proof.pdf},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@Article{Carozzi2016,
+  author    = {Carozzi, Felipe and Repetto, Luca},
+  journal   = {Journal of Public Economics},
+  title     = {Sending the pork home: Birth town bias in transfers to Italian municipalities},
+  year      = {2016},
+  pages     = {42--52},
+  volume    = {134},
+  abstract  = {We ask whether the birthplaces of Italian members of Parliament are favoured in the allocation of central government transfers. Using a panel of municipalities for the years between 1994 and 2006, we find that municipal governments of legislators' birth towns receive larger transfers per capita. Exploiting variation in birthplaces induced by parliamentary turnover for estimation, we find that this effect is driven by legislators who were born in a town outside their district of election. As a result, we argue that our findings cannot be a consequence of re-election incentives, the usual motivation for pork-barrel policies in the literature. Rather, politicians may be pursuing other personal motives. In line with this hypothesis, we find that the birth town bias essentially disappears when legislative elections are near. We explore several possible mechanisms behind our results by matching parliamentarians to a detailed dataset on local level administrators.},
+  pdf       = {Sending_the_pork_home.pdf},
+  publisher = {Elsevier},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@Unpublished{Amengual2014,
+  author    = {Amengual, Dante and Repetto, Luca and others},
+  title     = {Testing a large number of hypotheses in approximate factor models},
+  year      = {2014},
+  journal   = {Documentos de Trabajo (CEMFI)},
+  number    = {10},
+  pages     = {1},
+  publisher = {Centro de Estudios Monetarios y Financieros (CEMFI)},
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@Unpublished{Carozzi2022a,
+  author    = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
+  title     = {Powers that be? Political alignment, government formation, and government stability},
+  year      = {2022},
+  publisher = {CESifo Working Paper},
 }
+
+@Unpublished{SosaAndres2023,
+  author = {Sosa Andr{\'e}s, Maximiliano and Repetto, Luca},
+  title  = {Divided government, polarization, and policy: Regression-discontinuity evidence from US states},
+  year   = {2023},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
