--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -97,7 +97,7 @@ the allocation of transfers towards aligned governments.},
 }
 
 @Unpublished{SosaAndres2023,
-  author   = {Sosa Andr{\'e}s, Maximiliano and Repetto, Luca},
+  author   = {Sosa Andres, Maximiliano and Repetto, Luca},
   title    = {Divided government, polarization, and policy: Regression-discontinuity evidence from US states},
   year     = {2023},
   abstract = {In this paper we use data on US states and a regression-discontinuity design to study how divided government affects the polarization of the legislature, inter-branch conflict, and policy implementation. We document that republican legislators serving under a divided government have more conservative ideologies than those serving under a fully unified government. We find an opposite effects for Democrats. In terms of policy implementation, we find evidence of moderation: compared to unified republican governments, divided ones with a democratic chamber implement more liberal policies. Correspondingly, when Democrats lose unified control, policies become more conservative.},
