--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,32 +3,17 @@
 
 @string{aps = {American Physical Society,}}
 
-@Article{Repetto2018,
-  author   = {Repetto, Luca},
-  journal  = {The Economic Journal},
-  title    = {Political budget cycles with informed voters: evidence from Italy},
-  year     = {2018},
-  number   = {616},
-  pages    = {3320--3353},
-  volume   = {128},
-  abstract = {I exploit a reform that required Italian municipalities to disclose their balance sheets before elections to study whether having more informed voters affects the political budget cycle. Municipal investment in the year before elections is 28.5% higher than in electoral years, and the reform reduced this pre-electoral spending increase by one-third. I then study the role of local newspapers in disseminating municipal financial information to voters and find that the effect of the reform is twice as large in areas with relatively many newspaper readers, suggesting that mayors react to more informed voters by reducing spending manipulation.},
-  code     = {/assets/replication_data/PBC_Replication_package.zip},
-  html     = {https://doi.org/10.1111/ecoj.12570},
-  pdf      = {PBC_EJ_final.pdf},
-}
-
-@Article{Carozzi2019,
-  author    = {Carozzi, Felipe and Repetto, Luca},
-  journal   = {Regional Science and Urban Economics},
-  title     = {Distributive politics inside the city? The political economy of Spain's Plan E},
-  year      = {2019},
-  pages     = {85--106},
-  volume    = {75},
-  abstract  = {We study distributive politics inside cities by analysing how local governments allocate investment projects to voters across neighbourhoods. In particular, we ask whether politicians use investment to target their own supporters. To this aim, we use detailed geo-located investment data from \emph{Plan E}, a large fiscal stimulus program carried out in Spain in 2009-2011. Our main empirical strategy is based on a close-elections regression-discontinuity design. In contrast to previous studies -- which use aggregate data at the district or municipal level -- we exploit spatial variation in both investment and voter support within municipalities and find no evidence of supporter targeting. Complementary results indicate that voters may be responding to investment by increasing turnout.},
-  blog      = {http://nadaesgratis.es/admin/cuando-keynes-vino-al-pueblo-inversion-municipal-e-incentivos-electorales},
-  html      = {https://doi.org/10.1016/j.regsciurbeco.2019.02.002},
-  pdf       = {DP_inside_city_Feb_2019_Accepted.pdf},
-  publisher = {North-Holland},
+@Article{Carozzi2022,
+  author   = {Carozzi, Felipe and Cipullo Davide and Repetto, Luca},
+  journal  = {American Economic Journal: Applied Economics},
+  title    = {Political fragmentation and government stability: evidence from local governments in Spain},
+  year     = {2022},
+  number   = {2},
+  pages    = {23--50},
+  volume   = {14},
+  abstract = {This paper studies how political fragmentation affects government stability. Using a regression-discontinuity design, we show that each additional party with representation in the local parliament increases the probability that the incumbent government is unseated by 5 percentage points. The entry of an additional party affects stability by reducing the probability of a single-party majority and increasing the instability of governments when such a majority is not feasible. We interpret our results in light of a bargaining model of coalition formation featuring government instability.},
+  html     = {https://www.aeaweb.org/articles?id=10.1257/app.20200128&from=f},
+  pdf      = {PFGS_CarozziCipulloRepetto_R2_proof.pdf},
 }
 
 @Article{Repetto2020,
@@ -45,18 +30,34 @@
   publisher = {Oxford University Press},
 }
 
-@Article{Carozzi2022,
-  author   = {Carozzi, Felipe and Cipulland Repetto, Luca},
-  journal  = {American Economic Journal: Applied Economics},
-  title    = {Political fragmentation and government stability: evidence from local governments in Spain},
-  year     = {2022},
-  number   = {2},
-  pages    = {23--50},
-  volume   = {14},
-  abstract = {This paper studies how political fragmentation affects government stability. Using a regression-discontinuity design, we show that each additional party with representation in the local parliament increases the probability that the incumbent government is unseated by 5 percentage points. The entry of an additional party affects stability by reducing the probability of a single-party majority and increasing the instability of governments when such a majority is not feasible. We interpret our results in light of a bargaining model of coalition formation featuring government instability.},
-  html     = {https://www.aeaweb.org/articles?id=10.1257/app.20200128&from=f},
-  pdf      = {PFGS_CarozziCipulloRepetto_R2_proof.pdf},
+@Article{Carozzi2019,
+  author    = {Carozzi, Felipe and Repetto, Luca},
+  journal   = {Regional Science and Urban Economics},
+  title     = {Distributive politics inside the city? The political economy of Spain's Plan E},
+  year      = {2019},
+  pages     = {85--106},
+  volume    = {75},
+  abstract  = {We study distributive politics inside cities by analysing how local governments allocate investment projects to voters across neighbourhoods. In particular, we ask whether politicians use investment to target their own supporters. To this aim, we use detailed geo-located investment data from \emph{Plan E}, a large fiscal stimulus program carried out in Spain in 2009-2011. Our main empirical strategy is based on a close-elections regression-discontinuity design. In contrast to previous studies -- which use aggregate data at the district or municipal level -- we exploit spatial variation in both investment and voter support within municipalities and find no evidence of supporter targeting. Complementary results indicate that voters may be responding to investment by increasing turnout.},
+  blog      = {http://nadaesgratis.es/admin/cuando-keynes-vino-al-pueblo-inversion-municipal-e-incentivos-electorales},
+  html      = {https://doi.org/10.1016/j.regsciurbeco.2019.02.002},
+  pdf       = {DP_inside_city_Feb_2019_Accepted.pdf},
+  publisher = {North-Holland},
 }
+
+@Article{Repetto2018,
+  author   = {Repetto, Luca},
+  journal  = {The Economic Journal},
+  title    = {Political budget cycles with informed voters: evidence from Italy},
+  year     = {2018},
+  number   = {616},
+  pages    = {3320--3353},
+  volume   = {128},
+  abstract = {I exploit a reform that required Italian municipalities to disclose their balance sheets before elections to study whether having more informed voters affects the political budget cycle. Municipal investment in the year before elections is 28.5% higher than in electoral years, and the reform reduced this pre-electoral spending increase by one-third. I then study the role of local newspapers in disseminating municipal financial information to voters and find that the effect of the reform is twice as large in areas with relatively many newspaper readers, suggesting that mayors react to more informed voters by reducing spending manipulation.},
+  code     = {/assets/replication_data/PBC_Replication_package.zip},
+  html     = {https://doi.org/10.1111/ecoj.12570},
+  pdf      = {PBC_EJ_final.pdf},
+}
+
 
 @Article{Carozzi2016,
   author    = {Carozzi, Felipe and Repetto, Luca},
@@ -72,17 +73,23 @@
   publisher = {Elsevier},
 }
 
-@Unpublished{Amengual2014,
-  author    = {Amengual, Dante and Repetto, Luca},
-  title     = {Testing a large number of hypotheses in approximate factor models},
-  year      = {2014},
-  abstract  = {We propose a method to test hypotheses in approximate factor models when the number of restrictions under the null hypothesis grows with the sample size. We use a simple test statistic, based on the sums of squared residuals of the restricted and the unrestricted versions of the model, and derive its asymptotic distribution under different assumptions on the covariance structure of the error term. We show how to correct the expressions for the limiting mean and variance in the presence of both serial and cross-section correlation and provide estimators for those quantities that are easy to implement. Finally, we illustrate the small sample performance of these testing procedures through Monte Carlo simulations and apply them to reconsider Reis and Watson (2010)'s hypothesis of existence of a pure inflation factor in the US economy.},
-  journal   = {Documentos de Trabajo (CEMFI)},
-  number    = {10},
-  pages     = {1},
-  pdf       = {Amengual_Repetto_Testing_FM_December_2014.pdf},
-  publisher = {Centro de Estudios Monetarios y Financieros (CEMFI)},
+
+
+@Unpublished{Scarsofwar,
+  author   = {Carozzi, Felipe, and Pinchbeck Edward, and Repetto, Luca},
+  title    = {Scars of War: the Legacy of WW1 Deaths on Civic Capital and Combat Motivation},
+  year     = {2023},
+  abstract = {How does the memory of lives lost in past wars shape communities and the next generation of soldiers? We use newly collected geolocated data on British servicemen to study the
+legacy of the Great War mortality shock on local communities and the behaviour of soldiers
+in WW2. We find that community-wide fatalities in WW1 increase the numbers of deaths
+of the next generation in WW2 and the likelihood that these soldiers receive military honours. To explain these findings, we report that WW1 deaths had promoted civic-oriented
+and cooperative behaviours in the inter-war period, as measured by the creation of lasting
+war memorials, veterans’ associations and charities, and increases in voter participation.
+Overall, we present evidence that part of the legacy of the Great War on British servicemen
+runs through and is amplified by civic capital and the remembrance of fallen soldiers.},
+  pdf      = {Draft_wardead_Mar_2023.pdf},
 }
+
 
 @Unpublished{Carozzi2022a,
   author    = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
@@ -104,19 +111,17 @@ the allocation of transfers towards aligned governments.},
   pdf      = {Divided_government_Sep_2022.pdf},
 }
 
-@Unpublished{Scarsofwar,
-  author   = {Carozzi, Felipe, and Pinchbeck Edward, and Repetto, Luca},
-  title    = {Scars of War: the Legacy of WW1 Deaths on Civic Capital and Combat Motivation},
-  year     = {2023},
-  abstract = {How does the memory of lives lost in past wars shape communities and the next generation of soldiers? We use newly collected geolocated data on British servicemen to study the
-legacy of the Great War mortality shock on local communities and the behaviour of soldiers
-in WW2. We find that community-wide fatalities in WW1 increase the numbers of deaths
-of the next generation in WW2 and the likelihood that these soldiers receive military honours. To explain these findings, we report that WW1 deaths had promoted civic-oriented
-and cooperative behaviours in the inter-war period, as measured by the creation of lasting
-war memorials, veterans’ associations and charities, and increases in voter participation.
-Overall, we present evidence that part of the legacy of the Great War on British servicemen
-runs through and is amplified by civic capital and the remembrance of fallen soldiers.},
-  pdf      = {Draft_wardead_Mar_2023.pdf},
+@Unpublished{Amengual2014,
+  author    = {Amengual, Dante and Repetto, Luca},
+  title     = {Testing a large number of hypotheses in approximate factor models},
+  year      = {2014},
+  abstract  = {We propose a method to test hypotheses in approximate factor models when the number of restrictions under the null hypothesis grows with the sample size. We use a simple test statistic, based on the sums of squared residuals of the restricted and the unrestricted versions of the model, and derive its asymptotic distribution under different assumptions on the covariance structure of the error term. We show how to correct the expressions for the limiting mean and variance in the presence of both serial and cross-section correlation and provide estimators for those quantities that are easy to implement. Finally, we illustrate the small sample performance of these testing procedures through Monte Carlo simulations and apply them to reconsider Reis and Watson (2010)'s hypothesis of existence of a pure inflation factor in the US economy.},
+  journal   = {Documentos de Trabajo (CEMFI)},
+  number    = {10},
+  pages     = {1},
+  pdf       = {Amengual_Repetto_Testing_FM_December_2014.pdf},
+  publisher = {Centro de Estudios Monetarios y Financieros (CEMFI)},
 }
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
