--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,8 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
 @Article{Carozzi2022,
-  author   = {Carozzi, Felipe and Cipullo Davide and Repetto, Luca},
+  author   = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
   journal  = {American Economic Journal: Applied Economics},
   title    = {Political fragmentation and government stability: evidence from local governments in Spain},
   year     = {2022},
