--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -74,7 +74,7 @@
 
 
 @Unpublished{Scarsofwar,
-  author   = {Carozzi, Felipe, and Pinchbeck Edward, and Repetto, Luca},
+  author   = {Carozzi, Felipe  and Pinchbeck, Edward and Repetto, Luca},
   title    = {Scars of War: the Legacy of WW1 Deaths on Civic Capital and Combat Motivation},
   year     = {2023},
   abstract = {How does the memory of lives lost in past wars shape communities and the next generation of soldiers? We use newly collected geolocated data on British servicemen to study the
@@ -92,7 +92,7 @@ runs through and is amplified by civic capital and the remembrance of fallen sol
 @Unpublished{Carozzi2022a,
   author    = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
   title     = {Powers that be? Political alignment, government formation, and government stability},
-  year      = {2022},
+  year      = {2022, Conditionally accepted at Journal of Public Economics},
   abstract  = {We study how partisan alignment across levels of government affects coalition formation and government stability using a regression discontinuity design and a large dataset of Spanish municipal elections. We document a positive effect of alignment on both government formation and stability. Alignment increases the probability that the most-voted party appoints the mayor and decreases the probability that the government is unseated
 during the term. Aligned parties also obtain sizeable electoral gains in the next elections
 over unaligned ones. We show that these findings are not the consequence of favoritism in
