--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,15 +77,18 @@
   author   = {Carozzi, Felipe  and Pinchbeck, Edward and Repetto, Luca},
   title    = {Scars of War: the Legacy of WW1 Deaths on Civic Capital and Combat Motivation},
   year     = {2023},
-  abstract = {How does the memory of lives lost in past wars shape communities and the next generation of soldiers? We use newly collected geolocated data on British servicemen to study the
-legacy of the Great War mortality shock on local communities and the behaviour of soldiers
-in WW2. We find that community-wide fatalities in WW1 increase the numbers of deaths
-of the next generation in WW2 and the likelihood that these soldiers receive military honours. To explain these findings, we report that WW1 deaths had promoted civic-oriented
-and cooperative behaviours in the inter-war period, as measured by the creation of lasting
-war memorials, veterans’ associations and charities, and increases in voter participation.
-Overall, we present evidence that part of the legacy of the Great War on British servicemen
-runs through and is amplified by civic capital and the remembrance of fallen soldiers.},
-  pdf      = {Draft_wardead_Mar_2023.pdf},
+  abstract = {What drives soldiers to risk their life in combat? We show that the legacy of war creates
+lasting conditions that encourage younger generations to take greater risks when fighting for
+their country. Using individual-level data from over 4 million British war records, we show
+that WWI deaths deeply affected local communities and the behaviour of the next generation
+of soldiers. Servicemen from localities that suffered heavier losses in WWI were more likely
+to die or to be awarded military honours for bravery in WW2. To explain these findings, we
+document that WWI deaths promoted civic capital in the inter-war period – as demonstrated
+by the creation of lasting war memorials, veterans’ associations and charities, and increased
+voter participation. In addition, we show that sons of soldiers killed in WWI were more
+likely to die in combat, suggesting that both community-level and family-level transmission
+of values were important in this context},
+  pdf      = {Draft_wardead_July_2023.pdf},
 }
 
 
