--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,33 @@
 ---
 ---
 
+@article{Carozzi2022a,
+  author    = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
+  title     = {Powers that be? Political alignment, government formation, and government stability},
+  year      = {2023, Forthcoming at the Journal of Public Economics},
+  abstract  = {We study how partisan alignment across levels of government affects coalition formation and government stability using a regression discontinuity design and a large dataset of Spanish municipal elections. We document a positive effect of alignment on both government formation and stability. Alignment increases the probability that the most-voted party appoints the mayor and decreases the probability that the government is unseated
+during the term. Aligned parties also obtain sizeable electoral gains in the next elections
+over unaligned ones. We show that these findings are not the consequence of favoritism in
+the allocation of transfers towards aligned governments.},
+  pdf       = {PTB_JPub_2023.pdf},
+  publisher = {},
+}
+
+@article{repetto2023divided,
+  title={Divided government, polarization, and policy: Regression-discontinuity evidence from US states},
+  author={Repetto, Luca and Sosa Andres, Maximiliano},
+  journal={European Journal of Political Economy},
+  pages={102473},
+  year={2023},
+  publisher={Elsevier},
+  abstract={In this paper we use data on US states and a regression-discontinuity design to study how divided government affects the polarization of the legislature, inter-branch conflict, and policy
+implementation. We document that Republican legislators serving under a divided government have more conservative ideologies than those serving under a fully unified government.
+Correspondingly, Democrats have more liberal ideologies. In terms of policy implementation,
+however, we find evidence of moderation: compared to unified Republican governments, divided ones with a democratic governorship or senate implement more liberal policies. When
+Democrats lose unified control, instead, policies become more conservative.},
+  pdf  = {Divided_government_July_2023_EJPE_final.pdf},
+}
+
 @Article{Carozzi2022,
   author   = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
   journal  = {American Economic Journal: Applied Economics},
@@ -88,28 +115,9 @@ by the creation of lasting war memorials, veterans’ associations and charities
 voter participation. In addition, we show that sons of soldiers killed in WWI were more
 likely to die in combat, suggesting that both community-level and family-level transmission
 of values were important in this context},
-  pdf      = {Draft_wardead_July_2023.pdf},
-}
-
-
-@Unpublished{Carozzi2022a,
-  author    = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
-  title     = {Powers that be? Political alignment, government formation, and government stability},
-  year      = {2022, Conditionally accepted at Journal of Public Economics},
-  abstract  = {We study how partisan alignment across levels of government affects coalition formation and government stability using a regression discontinuity design and a large dataset of Spanish municipal elections. We document a positive effect of alignment on both government formation and stability. Alignment increases the probability that the most-voted party appoints the mayor and decreases the probability that the government is unseated
-during the term. Aligned parties also obtain sizeable electoral gains in the next elections
-over unaligned ones. We show that these findings are not the consequence of favoritism in
-the allocation of transfers towards aligned governments.},
-  pdf       = {CCR_powers_that_be_Oct_2022.pdf},
-  publisher = {CESifo Working Paper},
-}
-
-@Unpublished{SosaAndres2023,
-  author   = {Sosa Andres, Maximiliano and Repetto, Luca},
-  title    = {Divided government, polarization, and policy: Regression-discontinuity evidence from US states},
-  year     = {2023},
-  abstract = {In this paper we use data on US states and a regression-discontinuity design to study how divided government affects the polarization of the legislature, inter-branch conflict, and policy implementation. We document that republican legislators serving under a divided government have more conservative ideologies than those serving under a fully unified government. We find an opposite effects for Democrats. In terms of policy implementation, we find evidence of moderation: compared to unified republican governments, divided ones with a democratic chamber implement more liberal policies. Correspondingly, when Democrats lose unified control, policies become more conservative.},
-  pdf      = {Divided_government_Sep_2022.pdf},
+  pdf      = {Draft_wardead_Oct_2023.pdf},
+  slides      = {Scars_of_war_slides.pdf},
+  blog      = {https://blogs.lse.ac.uk/politicsandpolicy/how-the-scars-of-past-wars-continue-to-shape-uk-society/},
 }
 
 @Unpublished{Amengual2014,
