--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,15 +2,15 @@
 ---
 
 @article{Carozzi2022a,
-  author    = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
-  title     = {Powers that be? Political alignment, government formation, and government stability},
-  year      = {2023, Forthcoming at the Journal of Public Economics},
-  abstract  = {We study how partisan alignment across levels of government affects coalition formation and government stability using a regression discontinuity design and a large dataset of Spanish municipal elections. We document a positive effect of alignment on both government formation and stability. Alignment increases the probability that the most-voted party appoints the mayor and decreases the probability that the government is unseated
-during the term. Aligned parties also obtain sizeable electoral gains in the next elections
-over unaligned ones. We show that these findings are not the consequence of favoritism in
-the allocation of transfers towards aligned governments.},
-  pdf       = {PTB_JPub_2023.pdf},
-  publisher = {},
+  title={Powers that be? Political alignment, government formation, and government stability},
+  author={Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
+  journal={Journal of Public Economics},
+  volume={230},
+  pages={105017},
+  year={2024},
+  publisher={Elsevier}
+  pdf  = {PTB_Jpub_final.pdf},
+  html      = {https://www.sciencedirect.com/science/article/pii/S0047272723001998},
 }
 
 @article{repetto2023divided,
@@ -26,7 +26,10 @@ Correspondingly, Democrats have more liberal ideologies. In terms of policy impl
 however, we find evidence of moderation: compared to unified Republican governments, divided ones with a democratic governorship or senate implement more liberal policies. When
 Democrats lose unified control, instead, policies become more conservative.},
   pdf  = {Divided_government_July_2023_EJPE_final.pdf},
+  html      = {https://www.sciencedirect.com/science/article/pii/S0176268023001179#sec2}, 
+
 }
+
 
 @Article{Carozzi2022,
   author   = {Carozzi, Felipe and Cipullo, Davide and Repetto, Luca},
