--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,9 +8,11 @@
   volume={230},
   pages={105017},
   year={2024},
-  publisher={Elsevier}
+  publisher={Elsevier},
   pdf  = {PTB_Jpub_final.pdf},
-  html      = {https://www.sciencedirect.com/science/article/pii/S0047272723001998},
+  abstract = {We study how partisan alignment across levels of government affects coalition formation and government stability using a regression discontinuity design and a large dataset of Spanish municipal elections. We document a positive effect of alignment on both government formation and stability. Alignment increases the probability that the most-voted party appoints the mayor and decreases the probability that the government is unseated during the term. Aligned parties also obtain sizeable electoral gains in the next elections. We show that these findings are not the consequence of favoritism in the allocation of transfers towards aligned governments.},
+  html  = {https://www.sciencedirect.com/science/article/pii/S0047272723001998},
+  code = {https://www.openicpsr.org/openicpsr/project/195361/version/V1/view},
 }
 
 @article{repetto2023divided,
@@ -26,7 +28,7 @@ Correspondingly, Democrats have more liberal ideologies. In terms of policy impl
 however, we find evidence of moderation: compared to unified Republican governments, divided ones with a democratic governorship or senate implement more liberal policies. When
 Democrats lose unified control, instead, policies become more conservative.},
   pdf  = {Divided_government_July_2023_EJPE_final.pdf},
-  html      = {https://www.sciencedirect.com/science/article/pii/S0176268023001179#sec2}, 
+  html  = {https://www.sciencedirect.com/science/article/pii/S0176268023001179#sec2}, 
 
 }
 
@@ -42,6 +44,7 @@ Democrats lose unified control, instead, policies become more conservative.},
   abstract = {This paper studies how political fragmentation affects government stability. Using a regression-discontinuity design, we show that each additional party with representation in the local parliament increases the probability that the incumbent government is unseated by 5 percentage points. The entry of an additional party affects stability by reducing the probability of a single-party majority and increasing the instability of governments when such a majority is not feasible. We interpret our results in light of a bargaining model of coalition formation featuring government instability.},
   html     = {https://www.aeaweb.org/articles?id=10.1257/app.20200128&from=f},
   pdf      = {PFGS_CarozziCipulloRepetto_R2_proof.pdf},
+  code     = {https://www.openicpsr.org/openicpsr/project/125341/version/V1/view}
 }
 
 @Article{Repetto2020,
