--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -109,7 +109,7 @@ Democrats lose unified control, instead, policies become more conservative.},
 @Unpublished{Scarsofwar,
   author   = {Carozzi, Felipe  and Pinchbeck, Edward and Repetto, Luca},
   title    = {Scars of War: the Legacy of WW1 Deaths on Civic Capital and Combat Motivation},
-  year     = {2023},
+  year     = {2024},
   abstract = {What drives soldiers to risk their life in combat? We show that the legacy of war creates
 lasting conditions that encourage younger generations to take greater risks when fighting for
 their country. Using individual-level data from over 4 million British war records, we show
@@ -121,7 +121,7 @@ by the creation of lasting war memorials, veterans’ associations and charities
 voter participation. In addition, we show that sons of soldiers killed in WWI were more
 likely to die in combat, suggesting that both community-level and family-level transmission
 of values were important in this context},
-  pdf      = {Draft_wardead_Oct_2023.pdf},
+  pdf      = {Draft_wardead_July_2024.pdf},
   slides      = {Scars_of_war_slides.pdf},
   blog      = {https://blogs.lse.ac.uk/politicsandpolicy/how-the-scars-of-past-wars-continue-to-shape-uk-society/},
 }
