--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -110,17 +110,17 @@ Democrats lose unified control, instead, policies become more conservative.},
   author   = {Carozzi, Felipe  and Pinchbeck, Edward and Repetto, Luca},
   title    = {Scars of War: the Legacy of WW1 Deaths on Civic Capital and Combat Motivation},
   year     = {2024},
-  abstract = {What drives soldiers to risk their life in combat? We show that the legacy of war creates
-lasting conditions that encourage younger generations to take greater risks when fighting for
-their country. Using individual-level data from over 4 million British war records, we show
-that WWI deaths deeply affected local communities and the behaviour of the next generation
-of soldiers. Servicemen from localities that suffered heavier losses in WWI were more likely
-to die or to be awarded military honours for bravery in WW2. To explain these findings, we
-document that WWI deaths promoted civic capital in the inter-war period – as demonstrated
-by the creation of lasting war memorials, veterans’ associations and charities, and increased
-voter participation. In addition, we show that sons of soldiers killed in WWI were more
-likely to die in combat, suggesting that both community-level and family-level transmission
-of values were important in this context},
+  abstract = {What drives soldiers to risk their life in combat? Using individual-level data from over 
+  4 million British war records, we show that the legacy of WWI deeply affected local communities and
+  the behaviour of the next generation of soldiers. Servicemen from localities that suffered heavier 
+  losses in WWI were considerably more likely to die or to win gallantry awards for valour in WW2. 
+  To rationalise these findings, we show that the mortality shock increased communities' civic capital 
+  in the inter-war period: Great War deaths spur the creation of new charities, veterans' associations,
+   and historically significant memorials as well as promoting charitable donations and 
+   voter participation. Our results highlight the importance of the memory of past conflicts in 
+   fostering the creation of socially-oriented activities that, in turn, can shape the behaviour 
+   of soldiers in future wars.
+},
   pdf      = {Draft_wardead_July_2024.pdf},
   slides      = {Scars_of_war_slides.pdf},
   blog      = {https://blogs.lse.ac.uk/politicsandpolicy/how-the-scars-of-past-wars-continue-to-shape-uk-society/},
