--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -119,8 +119,7 @@ Democrats lose unified control, instead, policies become more conservative.},
    and historically significant memorials as well as promoting charitable donations and 
    voter participation. Our results highlight the importance of the memory of past conflicts in 
    fostering the creation of socially-oriented activities that, in turn, can shape the behaviour 
-   of soldiers in future wars.
-},
+   of soldiers in future wars.},
   pdf      = {Draft_wardead_July_2024.pdf},
   slides      = {Scars_of_war_slides.pdf},
   blog      = {https://blogs.lse.ac.uk/politicsandpolicy/how-the-scars-of-past-wars-continue-to-shape-uk-society/},
