--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -108,7 +108,7 @@ Democrats lose unified control, instead, policies become more conservative.},
 
 @Unpublished{Scarsofwar,
   author   = {Carozzi, Felipe  and Pinchbeck, Edward and Repetto, Luca},
-  title    = {Scars of War: the Legacy of WW1 Deaths on Civic Capital and Combat Motivation},
+  title    = {Scars of War: the Legacy of WW1 Deaths on Civic Capital and Combat Motivation - R&R AEJ:Applied},
   year     = {2024},
   abstract = {What drives soldiers to risk their life in combat? Using individual-level data from over 
   4 million British war records, we show that the legacy of WWI deeply affected local communities and
